z-index footer & cursor fixed

--- a/frontend/src/style/components/_Footer.sass
+++ b/frontend/src/style/components/_Footer.sass
@@ -6,7 +6,7 @@
     top: 100vh
     width: 100%
     transition: .5s
-    z-index: 8
+    z-index: 7
 
     &--active
         transform: translateY(-30vh)
